// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedControl snapshot (dois temas): claro 1`] = `
<View
  accessibilityRole="tablist"
  style={
    {
      "backgroundColor": "#F6F6F7",
      "borderRadius": 12,
      "flexDirection": "row",
      "padding": 4,
    }
  }
>
  <View
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "minHeight": 44,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "flex": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#5F5F6A",
            "borderRadius": 8,
            "borderWidth": 0,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#5F5F6A",
              },
              {},
              null,
            ]
          }
        >
          Semana
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "minHeight": 44,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "flex": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#5F5F6A",
            "borderRadius": 8,
            "borderWidth": 1,
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#111113",
              },
              {},
              null,
            ]
          }
        >
          Mês
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "minHeight": 44,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "flex": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#5F5F6A",
            "borderRadius": 8,
            "borderWidth": 0,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#5F5F6A",
              },
              {},
              null,
            ]
          }
        >
          Ano
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SegmentedControl snapshot (dois temas): escuro 1`] = `
<View
  accessibilityRole="tablist"
  style={
    {
      "backgroundColor": "#17171A",
      "borderRadius": 12,
      "flexDirection": "row",
      "padding": 4,
    }
  }
>
  <View
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "minHeight": 44,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "flex": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#202024",
            "borderColor": "#9B9BA6",
            "borderRadius": 8,
            "borderWidth": 0,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#9B9BA6",
              },
              {},
              null,
            ]
          }
        >
          Semana
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "minHeight": 44,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "flex": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#202024",
            "borderColor": "#9B9BA6",
            "borderRadius": 8,
            "borderWidth": 1,
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#F2F2F3",
              },
              {},
              null,
            ]
          }
        >
          Mês
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "minHeight": 44,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "flex": 1,
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#202024",
            "borderColor": "#9B9BA6",
            "borderRadius": 8,
            "borderWidth": 0,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#9B9BA6",
              },
              {},
              null,
            ]
          }
        >
          Ano
        </Text>
      </View>
    </View>
  </View>
</View>
`;
